# oxidized_android_todo

./: readme.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/todolist/: AddItem.java  MainActivity.java  RustDatabase.java  ToDoListAdapter.java
app/src/main/res/layout/: activity_add_item.xml  activity_main.xml  recyclerview_item.xml
app/src/main/rust/: Cargo.toml  build.bat
app/src/main/rust/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
