[lib]
crate-type = ["cdylib"]

[package]
name = "todo_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
j4rs = "0.17.0"
j4rs_derive = "0.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.171", features = ["derive"] }
